Updated landing page and Read Me files

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </style>
 </head>
 <body>
-  <h1>The Codex</h1>
+  <h1>The Codex - Development Page</h1>
   <h2><i> Even a shattered mirror casts a reflection. One needs only be willing to look to see the truth. </i></h2>
 
 <br>
